2003-01-08 Vaclav Haisman <V.Haisman@sh.cvut.cZ>
	* ast.cxx, ast.hxx: Kompletni AST.
	
2003-01-04 Vaclav Haisman <V.Haisman@sh.cvut.cz>
	* ast.cxx, ast.hxx: Snad kompletni podpora vyrazu.
	
2003-01-01 Vaclav Haisman <V.Haisman@sh.cvut.cz>
	* lexan.lex, csynan.y: Nove soubory.
	
2003-01-01 Vaclav Haisman <V.Haisman@sh.cvut.cz>
        * ast.hxx, ast.cxx: Commit pred zmenou na autoconf.

2002-12-13 Vaclav Haisman <V.Haisman@sh.cvut.cz>
	* lexan.cxx: Pridani rozpoznani dalsich escape kodu.
	* ast.hxx: Novy soubor.
	* ast.cxx: Novy soubor.
	
2002-12-09 Vaclav Haisman <V.Haisman@sh.cvut.cz>
	* lexan.cxx: Upraveno poradi includes. Smazany nepotrebne promenne. 
	Presunuti lexikalni anlyzy klicovych slov, identifikatoru a cisel do 
	tela lexan(). Pridana lexikalni analyza znakovych a retezcovych 
	konstant. Pridano preskakovani komentaru a bilych znaku..
	* lexan.hxx: Ulozeni ciselnych hodnot do unionu. Preformatovani.
	
2002-12-08 Vaclav Haisman <V.Haisman@sh.cvut.cz>
	* lexan.cxx: Novy soubor.
	* lexan.hxx: Novy soubor.
	* genlexan.pl: Pozmeneni.
	* keywords.txt: Pridani chybejicich operatoru.
	
2002-12-06 Vaclav Haisman <V.Haisman@sh.cvut.cz>
        * genlexan.pl: Import generatoru lexikalniho analyzatoru.
        * keywords.txt: Seznam klicovych slov pro generator.