@@ -1,3 +1,10 @@
+2003-01-08 Vaclav Haisman <V.Hasiman@sh.cvut.cz>
+	* ast.hxx: Nove prvky enum Type. Definice clone() pro konstantni
+	vyrazy.
+	* ast.cxx: Implementace clone().
+	* csynan.y: Implementace semantickych akci v parseru pro vsechny
+	vyrazy.
+	
 2003-01-08 Vaclav Haisman <V.Haisman@sh.cvut.cZ>
 	* ast.cxx, ast.hxx: Kompletni AST.
 	
